# focus-pulse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_core_domain_data_model.py  005_ai_analysis_engine.py  006_insights_recommendations.py
backend/app/: .gitkeep  README.md  __init__.py  main.py
backend/app/api/: .gitkeep  README.md  __init__.py  dependencies.py  router.py
backend/app/core/: .gitkeep  README.md  config.py  database.py  exceptions.py  logging.py
backend/app/settings/: .gitkeep  README.md  __init__.py  ai.py  app.py  celery.py  database.py  redis.py
backend/app/shared/: .gitkeep  README.md
backend/app/workers/: .gitkeep  README.md  asyncio_runner.py  celery_app.py  schedule_windows.py  scheduler.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_ai_analysis_schedules_api.py  test_ai_insight_api.py  test_ai_insight_api_errors.py  test_ai_insight_results_api.py  test_ai_insight_results_api_errors.py  test_automation_schedule_api_errors.py  test_cors.py  test_daily_log_detail_api.py  test_daily_log_detail_api_errors.py  test_dashboard_api.py  test_dashboard_api_errors.py  test_dashboard_breakdown_api.py  test_import_confirm_api.py  test_import_confirm_api_errors.py  test_import_history_api.py  test_import_preview_api.py  test_import_preview_api_errors.py  test_import_row_outcomes_api.py  test_import_schedules_api.py  test_import_status_api.py
(+322 files in other folders)
